[gd_scene load_steps=2 format=3 uid="uid://ch4f4njpm2rpt"]

[ext_resource type="Script" uid="uid://b1frgtmr8d3ub" path="res://escape.gd" id="1_yd6hd"]

[node name="escape" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_yd6hd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 397.0
offset_top = 263.0
offset_right = 725.0
offset_bottom = 525.0

[node name="continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CONTINUE"

[node name="save" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "SAVE"

[node name="options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "OPTIONS
"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MAIN MENU
"

[connection signal="pressed" from="VBoxContainer/continue" to="." method="continue_game"]
[connection signal="pressed" from="VBoxContainer/save" to="." method="save_escape"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="quit_main"]
